--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -2,6 +2,7 @@ name: 🐛 Bug Report
 description: Report a bug or unexpected behavior
 title: "fix: [brief description]"
 labels: ["bug", "triage"]
+type: bug
 body:
   - type: markdown
     attributes:
