--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -2,6 +2,7 @@ name: ✨ Feature Request
 description: Suggest an idea for this project
 title: "feat: [brief description]"
 labels: ["enhancement", "triage"]
+type: feature
 body:
   - type: markdown
     attributes:
