fix: implement dynamic labels for docker-build-push reusable action

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -2,6 +2,17 @@ name: Docker Build and Push
 
 on:
   workflow_call:
+    inputs:
+      image_title:
+        description: Human readable image title (org.opencontainers.image.title)
+        required: true
+        type: string
+        default: ""
+      image_description:
+        description: Human readable image description (org.opencontainers.image.description)
+        required: true
+        type: string
+        default: ""
 
 permissions:
   packages: write
@@ -67,16 +78,15 @@ jobs:
             org.opencontainers.image.version=${{ steps.gradle_version.outputs.value }}
             org.opencontainers.image.vendor=Grounds
             org.opencontainers.image.ref.name=${{ github.sha }}
-            org.opencontainers.image.title=service-player
-            org.opencontainers.image.description=Quarkus-based gRPC service for player related operations.
+            org.opencontainers.image.title=${{ inputs.image_title }}
+            org.opencontainers.image.description=${{ inputs.image_description }}
 
       - name: Build image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          load: ${{ github.event_name == 'pull_request' }}
+          load: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
